exports[`test A standard order 1`] = `
<li
  className="yNbwP">
  <span
    className="OTulW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="eyKrwF">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="jPvoSH">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dZeSps">
    completed
  </span>
  <span
    className="eYQFHK">
    <a
      aria-label="Download invoice"
      className="gjWJrZ"
      href="http://somelink"
      iconSource="download.svg"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </a>
  </span>
</li>
`;

exports[`test An Order with a disabled invoice button 1`] = `
<li
  className="yNbwP">
  <span
    className="OTulW">
    <span>
      January 1, 2012
    </span>
  </span>
  <span
    className="fKqvxj">
    MOOIE 456 TEST
  </span>
  <span
    className="eyKrwF">
    <span
      className="gLZwgs">
      <span
        className="gLZwgs">
        Name of the product
      </span>
      <span
        className="gLZwgs">
        Another product
      </span>
    </span>
  </span>
  <span
    className="jPvoSH">
    <span>
      $100.00
    </span>
  </span>
  <span
    className="dZeSps">
    pending
  </span>
  <span
    className="eYQFHK">
    <button
      aria-label="Download invoice"
      className="hlkIIS eoqTBx"
      disabled="disabled"
      to="http://somelink">
      <span
        className="screen-reader-text">
        Invoice
      </span>
    </button>
  </span>
</li>
`;
